Changed repository over to testing repository

--- a/pacman.conf
+++ b/pacman.conf
@@ -75,7 +75,8 @@ LocalFileSigLevel = Optional
 
 [acreetionOSREPO-main]
 SigLevel = Never
-Server = https://darrengames.ddns.net:1500/repo-main/$arch
+Server = https://darrengames.ddns.net:1500/repo/$arch
+
 
 [arch-mact2]
 Server = https://mirror.funami.tech/arch-mact2/os/x86_64
